--- a/SAPWeb/Views/Auth/Login.cshtml
+++ b/SAPWeb/Views/Auth/Login.cshtml
@@ -1,4 +1,6 @@
-﻿@model SAPWeb.Models.UserLogin
+﻿@using SAPWeb.Models;
+@model SAPWeb.Models.UserLogin
+
 @{
     Layout = null;
 }
@@ -32,6 +34,7 @@
                 {
                     @Html.AntiForgeryToken()
                     @Html.ValidationSummary(true)
+
                     <div class="form-group">
                         <div class="col-xs-12 text-center">
                             <div class="user-thumb text-center">
@@ -40,9 +43,23 @@
                             </div>
                         </div>
                     </div>
+                    if (TempData["Athentication"] != null)
+                    {
+                        var obj = TempData["Athentication"];
+                        var statusCode = obj as UserDefault;
+                        if (statusCode.errorCode == "0")
+                        {
+                            <div class="alert alert-danger alert-dismissible show" role="alert">
+                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                                @statusCode.errorMsg
+                            </div>
+                        }
+                    }
                     <div class="form-group ">
                         <div class="col-xs-12">
-                            @Html.TextBoxFor(model => model.UserName  , new { @class = "form-control", id = "txtusername", placeholder = "Username", maxlength = 50, required = "required" })
+                            @Html.TextBoxFor(model => model.UserName, new { @class = "form-control", id = "txtusername", placeholder = "Username", maxlength = 50, required = "required" })
                         </div>
                     </div>
                     <div class="form-group">
@@ -52,7 +69,7 @@
                     </div>
                     <div class="form-group text-center m-t-20">
                         <div class="col-xs-12">
-                            <button class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light"  type="submit" id="loginbtn">Log In</button>
+                            <button class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light" type="submit" id="loginbtn">Log In</button>
                         </div>
                     </div>
                 }
