--- a/SAPWeb/Views/Shared/_Layout.cshtml
+++ b/SAPWeb/Views/Shared/_Layout.cshtml
@@ -231,6 +231,9 @@
                         <li class="two-column">
                             <a class="waves-effect" href="@Url.Action("index","SalesQuotation")" aria-expanded="false"><i class="icon-equalizer fa-fw"></i> <span class="hide-menu"> Sales Quotation</span></a>
                         </li>
+                        <li class="two-column">
+                            <a class="waves-effect" href="@Url.Action("index","Invoice")" aria-expanded="false"><i class="icon-equalizer fa-fw"></i> <span class="hide-menu"> A/R Invoice</span></a>
+                        </li>
                     </ul>
                 </nav>
             </div>
