--- a/SAPWeb/Views/Invoice/Create.cshtml
+++ b/SAPWeb/Views/Invoice/Create.cshtml
@@ -13,6 +13,7 @@
     {
         adminRigth = "";
     }
+    string whsCode = SessionUtility.U_WhsCode;
 }
 <input id="hdnDocEntry" type="hidden" value="@Model.DocEntry"/>
 <input type="hidden" id="hdnQuotaionID" value="@Model.QuotaionID" />
@@ -56,24 +57,34 @@
                         </select>
                     </div>
                 </div>
+             
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <label for="ddlU_Territory">Territory</label>
+                        @*<input id="txtTerritoty" class="form-control" placeholder="Territoty" value="@(Model.U_Territory)" readonly>*@
+                        <select id="ddlU_Territory" class="form-control">
+                            <option value="99">Select Location</option>
+                            <option value="3">CENTRAL UGANDA</option>
+                            <option value="4">EAST UGANDA</option>
+                            <option value="5">WEST UGANDA</option>
+                            <option value="6">NORTH UGANDA</option>
+                            <option value="7">RWANDA</option>
+                            <option value="8">SUDAN</option>
+                            <option value="9">KENYA</option>
+                            <option value="10">CONGO</option>
+                            <option value="11">BURUNDI</option>
+                            <option value="12">TANZANIA</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
                 <div class="col-md-2">
                     <div class="form-group">
                         <label for="ddlLocalCurrency">Document Currency </label>
                         <input type="text" class="form-control" id="txtCurrency" value="@Model.DocCurrency" placeholder="Currency" readonly>
                     </div>
                 </div>
-                <!--<div class="col-md-2">
-        <div class="form-group">
-            <label for="txtTerritoty">Territoty</label>
-            <select id="ddlTerritoty" class="form-control">
-                <option>CENTRAL UGANDA</option>
-            </select>-->
-                @*<input id="txtTerritoty" class="form-control" placeholder="Territoty" readonly>*@
-                <!--</div>
-        </div>-->
-            </div>
-            <div class="row">
-
                 <div class="col-md-2">
                     <div class="form-group">
                         <label for="ddlBillToID">BillTo ID *</label>
@@ -109,16 +120,15 @@
                         </select>
                     </div>
                 </div>
+               
+            </div>
+            <div class="row">
                 <div class="col-md-2">
                     <div class="form-group">
                         <label for="txtQuotationNumber ">Quotation Number </label>
                         <input type="text" class="form-control" id="txtQuotationNumber" value="@Model.DocEntry" readonly>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-
-
                 <div class="col-md-2">
                     <div class="form-group">
                         <label for="txtPostingDate">Posting Date *</label>
@@ -153,11 +163,11 @@
                     </div>
                 </div>
                 @*<div class="col-md-2">
-                <div class="form-group">
-                    <label for="txtQuotationNumber ">FiscalDoc</label>
-                    <input type="text" class="form-control" id="txtFiscalDoc" readonly>
-                </div>
-            </div>*@
+            <div class="form-group">
+                <label for="txtQuotationNumber ">FiscalDoc</label>
+                <input type="text" class="form-control" id="txtFiscalDoc" readonly>
+            </div>
+        </div>*@
             </div>
             <div class="row">
                 <div class="col-md-2">
@@ -269,7 +279,7 @@
                                                     <label id="lblSrNo_@(count)">@(count)</label>
                                                 </td>
                                                 <td><input id="txtItemCode_@(count)" type="text" class="form-control itemsearch" value="@(item.ItemItemCode)"></td>
-                                                <td><input id="txtItemName_@(count)" class="form-control form-control-sm itemsearch" value="@(item.ItemDescription)" /></td>
+                                                <td><input id="txtItemName_@(count)" class="form-control form-control-sm itemsearchname" value="@(item.ItemDescription)" /></td>
                                                 <td><input id="txtQTY_@(count)" type="text" class="form-control quantity form-control-sm custom-select-sm form-control-sm-x numericdecimal" value="@item.ItemQuantity"> </td>
                                                 <td><input id="txtPrice_@(count)" readonly type="text" class="form-control rate form-control-sm custom-select-sm form-control-sm-x numericdecimal" value="@item.ItemPrice">  </td>
                                                 <td> <input id="txtTotalBefore_@(count)" type="text" class="form-control itemamount form-control-sm custom-select-sm form-control-sm-x numericdecimal" value="" readonly> </td>
@@ -327,7 +337,7 @@
                                                 <label id="lblSrNo_1">1</label>
                                             </td>
                                             <td><input id="txtItemCode_1" type="text" class="form-control itemsearch" value=""></td>
-                                            <td><input id="txtItemName_1" class="form-control form-control-sm itemsearch" /></td>
+                                            <td><input id="txtItemName_1" class="form-control form-control-sm itemsearchname" /></td>
                                             <td><input id="txtQTY_1" type="text" class="form-control quantity form-control-sm custom-select-sm form-control-sm-x numericdecimal" value=""> </td>
                                             <td><input id="txtPrice_1" type="text" readonly class="form-control rate form-control-sm custom-select-sm form-control-sm-x numericdecimal" value="">  </td>
                                             <td> <input id="txtTotalBefore_1" type="text" class="form-control itemamount form-control-sm custom-select-sm form-control-sm-x numericdecimal" value="" readonly> </td>
@@ -338,7 +348,15 @@
                                                     <option value="">Select TaxCode</option>
                                                     @foreach (var item in ViewBag.TaxCode as List<TaxCode>)
                                                     {
-                                                        <option value="@item.Code" data-rate="@(item.Value)">@item.Name</option>
+                                                        if (item.Code == "O1")
+                                                        {
+                                                            <option value="@item.Code" data-rate="@(item.Value)" selected>@item.Name</option>
+                                                        }
+                                                        else
+                                                        {
+
+                                                            <option value="@item.Code" data-rate="@(item.Value)">@item.Name</option>
+                                                        }
                                                     }
                                                 </select>
                                             </td>
@@ -352,7 +370,15 @@
                                                     <option value="">Select WarHouse</option>
                                                     @foreach (var ware in ViewBag.WarHouseCode as List<WareHouse>)
                                                     {
-                                                        <option value="@ware.Code" selected>@ware.Name</option>
+                                                        if (whsCode == ware.Code)
+                                                        {
+                                                            <option value="@ware.Code" selected>@ware.Name</option>
+                                                        }
+                                                        else
+                                                        {
+
+                                                            <option value="@ware.Code">@ware.Name</option>
+                                                        }
                                                     }
                                                 </select>
                                             </td>
@@ -443,6 +469,7 @@
 @section scripts{
     <script>
         var whsCode = '@SessionUtility.U_WhsCode';
+        slpCode = '@SessionUtility.U_SlpCode';
         $(document).ready(function () {
             customerCodeURL = '@Url.Action("GetCustomer", "Customer", new { area = "" })';
             invoiceHeaderURL = '@Url.Action("GetARInvoice", "Customer", new { area = "" })';
@@ -453,6 +480,8 @@
             if (sapWEB.helper.GetNumericValue('hdnDocEntry') > 0 || sapWEB.helper.GetNumericValue('hdnQuotaionID') > 0) {
                 sapWEB.ARInvoice.FNARInvoice();
                 sapWEB.ARInvoice.FNChangeEvent();
+                $("#ddlU_Territory").val('@Model.U_Territory');
+                $("#ddlU_Territory").trigger('change');
             }
             if ((sapWEB.helper.GetString('hdnDocEntry') != '' && sapWEB.helper.GetString('hdnDocEntry') !== "0")
                 || (sapWEB.helper.GetString('hdnQuotaionID') != '' && sapWEB.helper.GetString('hdnQuotaionID') !== "0")
@@ -481,6 +510,9 @@
                 var row = $('#tbody tr:last');
                 var rowIndex = $(row).attr('data-row-id');
                 $(row).find('#ddlWarCode_' + rowIndex).val(whsCode);
+                $('#ddlWarCode_' + rowIndex).trigger('change');
+                $(row).find('#ddlTaxCode_' + rowIndex).val("O1");
+                $('#ddlTaxCode_' + rowIndex).trigger('change');
             }
             return true;
         }
