--- a/SAPWeb/Views/Invoice/Create.cshtml
+++ b/SAPWeb/Views/Invoice/Create.cshtml
@@ -17,6 +17,7 @@
 }
 <input id="hdnDocEntry" type="hidden" value="@Model.DocEntry"/>
 <input type="hidden" id="hdnQuotaionID" value="@Model.QuotaionID" />
+<input type="hidden" id="hdnU_User" value="@Model.U_USER" />
 <div class="row">
     <div class="col-12">
         <div class="white-box">
@@ -427,12 +428,12 @@
                         <td class="text-right">
                             @if (Model.Rounding == "tYES")
                             {
-                                <input type="text" id="txtRounding" style="max-width:50% !important;" class="numericdecimal" value="@Model.RoundingDiffAmount" />
+                                <input type="text" id="txtRounding" style="max-width:50% !important;" class="numericdecimalnegativeallow" value="@Model.RoundingDiffAmount" />
                             }
                             else
                             {
 
-                                <input type="text" id="txtRounding" style="max-width:50% !important;" class="numericdecimal" value="@Model.RoundingDiffAmount" disabled="disabled" />
+                                <input type="text" id="txtRounding" style="max-width:50% !important;" class="numericdecimalnegativeallow" value="@Model.RoundingDiffAmount" disabled="disabled" />
                             }
                         </td>
                     </tr>
