--- a/SAPWeb/Views/Invoice/Index.cshtml
+++ b/SAPWeb/Views/Invoice/Index.cshtml
@@ -26,6 +26,7 @@
                 <table class="table" id="tblSalesOrder" width="100%">
                     <thead>
                         <tr>
+                            <th>Originator Name</th>
                             <th>CardCode</th>
                             <th>CardName</th>
                             <th>DocEntry</th>
